# naps

./: .gitignore  Dockerfile  config.toml.example  pyproject.toml  taskfile.yml
.github/workflows/: build.yml
src/naps/: __init__.py  __main__.py  client.py  config.py  converter.py  errors.py  schedule.py  sender.py  state.py  utils.py
src/naps/client/: __init__.py  client.py  converter.py  models.py
